# njsbcl-email-automation

./: .gitignore  README.md  config.py  contacts.txt  contacts_parser.py  email_manager.py  email_template.html  llm_contacts.py  main.py  pyproject.toml  scraper.py  test_draft.py
assets/: 2025_schedule.xlsx
