[project]
name = "biweekly-task-automation"
version = "1.0.0"
description = "Python application that automates biweekly task of scraping cricket game schedules, finding team contacts, and scheduling invitation emails for SPARTA XI cricket team"
authors = [
    {name = "SPARTA XI Team", email = "sparta.xi.cricket@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["automation", "web-scraping", "email", "cricket", "gmail-api"]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "google-auth>=2.23.4",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.108.0",
    "python-dateutil>=2.8.2",
    "lxml>=4.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] 